api 엔드포인트 수정